force-app/main/default/objects/Automation_Control_Setting__c/Automation_Control_Setting__c.object-meta.xml
<CustomObject>
    <label>Automation Control Setting</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Automation Control Setting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Automation Control Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>