force-app/main/default/objects/Automation_Control_Setting__c/fields/Commissions_Auto_Approved__c.field-meta.xml
<CustomField>
    <fullName>Commissions_Auto_Approved__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This will turn on or off the function in the automation where the all commissions are auto approved</description>
    <label>Commissions Auto Approved</label>
    <type>Checkbox</type>
</CustomField>