force-app/main/default/objects/Automation_Control_Setting__c/fields/Commissions_Campaigned_Opportunities_Aut__c.field-meta.xml
<CustomField>
    <fullName>Commissions_Campaigned_Opportunities_Aut__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This will turn on or off the function in the automation where the Campaigned Opportunity commissions are auto approved</description>
    <label>Commissions Campaigned Opportunities Aut</label>
    <type>Checkbox</type>
</CustomField>