force-app/main/default/objects/Automation_Control_Setting__c/fields/Commissions_SHP_with_the_Transaction_sou__c.field-meta.xml
<CustomField>
    <fullName>Commissions_SHP_with_the_Transaction_sou__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This will turn on or off the function where the Product Family is Superhuman Protocol and the Transaction Source is Store or POS</description>
    <label>Commissions SHP with the Transaction sou</label>
    <type>Checkbox</type>
</CustomField>